Added support for list3

--- a/tests/testcases/simple.html
+++ b/tests/testcases/simple.html
@@ -4,7 +4,7 @@
 <title>PAGETITLE</title>
 </head>
 <body>
-<script type="text/javascript" src="http://webdev.hbs.edu/shared/js/analytics/analytics.js"></script>
+<script type="text/javascript" src="../../dist/analytics.js"></script>
 <script>
 
 analytics.settings({profile:'test'});
