Added support for lowercase evar32

--- a/tests/testcases/simple.html
+++ b/tests/testcases/simple.html
@@ -8,7 +8,7 @@
 <script>
 
 analytics.settings({profile:'test'});
-analytics.settings({eventID:'2222'});
+analytics.settings({eventID:'2222Abc'});
 analytics.settings({eePersonID:'1111111'});
 analytics.settings({assetTitle:'TESTASSETTITLE'});
 
