upgraded to the latest adobe H.26.2

--- a/tests/testcases/simple.html
+++ b/tests/testcases/simple.html
@@ -7,6 +7,8 @@
 <script type="text/javascript" src="../../dist/analytics.js"></script>
 <script>
 
+s = "hello";
+
 analytics.settings({profile:'test'});
 analytics.settings({eventID:'2222Abc'});
 analytics.settings({eePersonID:'1111111'});
